new structure with agent, environment and actions; inspired from Sutton and Barto, ch. 3

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -53,7 +53,11 @@ add_executable(${PROJECT_NAME}
     snake/snakeengine.cpp
 
     # Reinforcement Learning
-    RL/qlearning.cpp
+    RL/agent.cpp
+    RL/snakeagent.cpp
+    RL/environment.cpp
+    RL/action.cpp
+    RL/snakeactions.cpp
 )
 
 if(WITH_QT)
