--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -62,7 +62,7 @@ endif(WITH_QT)
 #########################################################################
 ### OpenCV settings
 if(WITH_OPENCV)
-    find_package(OpenCV 3 REQUIRED)
+    find_package(OpenCV REQUIRED)
 endif(WITH_OPENCV)
 
 
